--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <input type="text" id="first-name" placeholder="Seu primeiro nome aqui">
       </li>
       <li>
-        <label for="last-name">Profissão</label>
-        <input type="text" id="last-name" placeholder="">
+        <label>Profissão</label>
+        <input type="text" placeholder="">
       </li>
       <li>
         <label for="email">Email</label>
